--- a/exercises/03-Type-Radio/index.html
+++ b/exercises/03-Type-Radio/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>4Geeks Academy</title>
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>4Geeks Academy</title>
-</head>
-
-<body>
-    <form>
-        <!-- your code here -->
-    </form>
-</body>
-
+	<body>
+		<form>
+			<p>Which is your Gender?</p>
+			<input type="radio" name="gender" value="Male" />
+			<label>Male</label>
+			<input type="radio" name="gender" value="Female" />
+			<label>Female</label>
+		</form>
+		<form>
+			<p>Which is your Sexual orientation?</p>
+			<input type="radio" name="Sexual Orientation" value="Heterosexual" />
+			<label>Heterosexual</label>
+			<input type="radio" name="Sexual Orientation" value="LGBTI" />
+			<label>LGBTI</label>
+		</form>
+	</body>
 </html>
