--- a/.learn/resets/07-Style-without-id-class/index.html
+++ b/.learn/resets/07-Style-without-id-class/index.html
@@ -17,8 +17,8 @@
 			</ul>
 			<!-- fieldsets -->
 			<fieldset data-check-id="1">
-				<h2>Sign Up Form</h2>
-				<h3>This is step 1</h3>
+				<h2 class="fs-title">Sign Up Form</h2>
+				<h3 class="fs-subtitle">This is step 1</h3>
 				<input name="name" placeholder="Name" />
 				<input type="email" name="email" placeholder="Email" />
 				<input type="button" name="next" class="next action-button" value="Next Step" />
